--- a/src/css/divider.css
+++ b/src/css/divider.css
@@ -8,7 +8,7 @@
   
   .divider-image {
     position: absolute;
-    max-width: 100%;
+    width: 90vw;
     left: 50%;
     transform: translateX(-50%);
   }
