--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -144,6 +144,7 @@
     overflow-y: auto;
     scrollbar-width: thin;
     padding-right: 8px;
+    padding-top: 2rem;
 
     font-family: var(--ff-primary);
     font-size: 1.2rem;
@@ -161,6 +162,7 @@
     text-align: center;
     width: 80%;
     height: 20vh;
+    padding-top: 2rem;
 
     font-family: var(--ff-primary);
     font-size: 1.5rem;
